[MODULES-294][MODULES-297] Don't create URI instances until really needed.